
syntax = "proto3";

option java_package="com.milchstrabe.rainbow.skt.server.typ3.grpc";

message MsgRequest{
    string msgId = 1;
    int32 msgType = 2;
    string content = 3;
    string sender = 4;
    string receiver = 5;
    uint64 date = 6;

}

message MsgResponse{
    int32 code = 1;
    string msg = 2;
}


service PassThroughMessageService{
    rpc passThroughMessage (MsgRequest) returns (MsgResponse){}
}